# Stop-and-Search-London

./: .gitignore  README.md  conftest.py  pyproject.toml
config/: config.py
data/raw/land_registry/: land_reg_cols.txt
notebooks/: 01_data_exploration.ipynb  02_inequality_measure.ipynb  03_spatial_diagnostics.ipynb  04_control_variables.ipynb  05_modelling.ipynb  06_results_visualisation.ipynb
notebooks/utils_notebooks/: build_lsoa_boundaries.ipynb  get_land_reg_data.ipynb
pipeline/: 01_download_raw.py  02_clean_ss_data.py  03_build_lsoa_boundaries.py  04_build_inequality_measure.py  05_build_controls.py  06_merge_analysis_dataset.py  07_spatial_diagnostics.py  08_models.py
tests/: test_gini.py  test_spatial.py
utils/: __init__.py  gini.py
